--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .ts,.js,.vue --no-fix --max-warnings 0 src"
+    "lint": "eslint --ext .ts,.js,.vue --fix --max-warnings 0 src"
   },
   "dependencies": {
     "lodash": "^4.17.21",
