feat: Add schedule trigger

--- a/.github/actions/updateSongList.yml
+++ b/.github/actions/updateSongList.yml
@@ -1,5 +1,8 @@
 on:
-  workflow_dispatch
+  schedule:
+    # every 2 days, at midnight
+    - cron: '0 0 */2 * *'
+  workflow_dispatch:
 
 jobs:
   updateSongList:
