feat: Add push trigger

--- a/.github/actions/updateSongList.yml
+++ b/.github/actions/updateSongList.yml
@@ -2,7 +2,10 @@ on:
   schedule:
     # every 2 days, at midnight
     - cron: '0 0 */2 * *'
-  workflow_dispatch:
+  push:
+    branches:
+      - master
+  workflow_dispatch
 
 jobs:
   updateSongList:
