--- a/.github/workflows/updateSongList.yml
+++ b/.github/workflows/updateSongList.yml
@@ -1,7 +1,7 @@
 on:
   schedule:
     # every 2 days, at midnight
-    - cron: '0 0 */2 * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
