--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --ext .ts,.js,.vue --no-fix --max-warnings 0 src"
   },
   "dependencies": {
+    "@mdi/js": "^6.5.95",
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
     "vue": "^3.2.25"
