--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "lint": "eslint --ext .ts,.js,.vue --no-fix --max-warnings 0 src"
   },
   "dependencies": {
-    "@mdi/js": "^6.5.95",
-    "date-fns": "^2.28.0",
+    "@mdi/js": "^7.1.96",
+    "date-fns": "^2.29.3",
     "lodash": "^4.17.21",
-    "vue": "^3.2.25"
+    "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.178",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
-    "@vitejs/plugin-vue": "^2.0.0",
-    "@vue/eslint-config-airbnb": "^6.0.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
-    "eslint": "8.6.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "eslint-plugin-vuejs-accessibility": "^1.1.1",
-    "prettier": "^2.5.1",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vue-tsc": "^0.30.2"
+    "@types/lodash": "^4.14.191",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-airbnb": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "eslint": "^8.29.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.8.0",
+    "eslint-plugin-vuejs-accessibility": "^2.0.0",
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.1",
+    "vue-tsc": "^1.0.13"
   }
 }
