build: Add yarn version so netlify uses the correct one

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "the-papayas",
   "version": "0.0.0",
+  "packageManager": "yarn@3.3.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
