--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 node_modules
-.yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 .DS_Store
 /dist
 dist-ssr
