--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-airbnb": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.29.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -28,7 +29,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.8.0",
     "eslint-plugin-vuejs-accessibility": "^2.0.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.2",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "vite": "^4.0.1",
     "vue-tsc": "^1.0.13"
