--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/lodash": "^4.14.191",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
@@ -30,6 +31,7 @@
     "eslint-plugin-vue": "^9.8.0",
     "eslint-plugin-vuejs-accessibility": "^2.0.0",
     "postcss": "^8.4.21",
+    "postcss-nesting": "^11.1.0",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
