--- a/.github/actions/fetchList/.gitignore
+++ b/.github/actions/fetchList/.gitignore
@@ -1,11 +1,11 @@
-**/node_modules
-**/.pnp.*
-**/.yarn/*
-!**/.yarn/patches
-!**/.yarn/plugins
-!**/.yarn/releases
-!**/.yarn/sdks
-!**/.yarn/versions
+node_modules
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 .DS_Store
 *.local
 .idea
