fix: Add correct url

--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -12,7 +12,7 @@ jobs:
 
     environment:
       name: Production
-      url: https://papayas-studio.dev
+      url: https://papaya-studios.dev
 
     steps:
       - name: Setup repo
